Fix redirect urls template processing (#1251)
removed duplicated key and added tests

--- a/infrastructure_files/management.json.tmpl
+++ b/infrastructure_files/management.json.tmpl
@@ -82,8 +82,7 @@
             "TokenEndpoint": "$NETBIRD_AUTH_TOKEN_ENDPOINT",
             "Scope": "$NETBIRD_AUTH_SUPPORTED_SCOPES",
             "RedirectURLs": [$NETBIRD_AUTH_PKCE_REDIRECT_URLS],
-            "UseIDToken": $NETBIRD_AUTH_PKCE_USE_ID_TOKEN,
-            "RedirectURLs": null
+            "UseIDToken": $NETBIRD_AUTH_PKCE_USE_ID_TOKEN
         }
     }
 }
