--- a/infrastructure_files/turnserver.conf.tmpl
+++ b/infrastructure_files/turnserver.conf.tmpl
@@ -677,7 +677,7 @@ no-cli
 #
 #cli-password=$5$79a316b350311570$81df9cfb9af7f5e5a76eada31e7097b663a0670f99a3c07ded3f1c8e59c5658a
 #
-# Or unsecure form for the same password:
+# Or insecure form for the same password:
 #
 # cli-password=CHANGE_ME
 
